--- a/SAP Week4/2025.09.30.md
+++ b/SAP Week4/2025.09.30.md
@@ -12,15 +12,13 @@
 
 - 그룹 이름(Z로 시작)과 설명 넣기 -> 이후 패키지에 $TMP 넣고 저장
 
-<img width="494" height="94" alt="Image" src="https://github.com/user-attachments/assets/404ae01f-6f6c-4ee8-9675-9ddc73e802ee" />
+<img width="609" height="149" alt="Image" src="https://github.com/user-attachments/assets/6de358e7-e153-4010-b26c-1472f8b1d27e" />
 
 - 방금 만든 그룹 선택
 
-<img width="609" height="149" alt="Image" src="https://github.com/user-attachments/assets/6de358e7-e153-4010-b26c-1472f8b1d27e" />
+<img width="833" height="203" alt="Image" src="https://github.com/user-attachments/assets/ecea0e50-fbf2-4b2e-bd74-5372d95a538c" />
 
 - 변수명, 타입, 아탑타입
-
-<img width="833" height="203" alt="Image" src="https://github.com/user-attachments/assets/ecea0e50-fbf2-4b2e-bd74-5372d95a538c" />
 
 <img width="907" height="599" alt="Image" src="https://github.com/user-attachments/assets/d6d93a63-aa92-4b64-b499-ae5ab5ab55b7" />
 
@@ -42,23 +40,23 @@
 
 - Pattern 클릭 -> 방금 만든 펑션 이름을 넣고 체크표시 클릭
 
-<img width="857" height="204" alt="Image" src="https://github.com/user-attachments/assets/18f6148c-dedb-42b7-8d59-5f6f8e9a21a0" />
+<img width="601" height="298" alt="Image" src="https://github.com/user-attachments/assets/3544764b-2e76-4de5-a066-316566a1c159" />
 
 - DATA 타입 선언해주기, 값도 넣을 수 있음.
 
-<img width="847" height="173" alt="Image" src="https://github.com/user-attachments/assets/a1c7a540-57fe-4acd-97e6-1f328e07c705" />
+<img width="1520" height="245" alt="Image" src="https://github.com/user-attachments/assets/0109efe2-7f7a-4e40-8f5e-7d127e0c43e5" />
 
 - 디버깅을하면 로켤 변수는 나오다가 펑션에 들어가는 순간 모두 값이 안나옴
 
-<img width="601" height="298" alt="Image" src="https://github.com/user-attachments/assets/3544764b-2e76-4de5-a066-316566a1c159" />
+<img width="1510" height="517" alt="Image" src="https://github.com/user-attachments/assets/1ecda87d-adbb-47b7-95f4-e34b7553e255" />
 
 - NUM1, 2를 눌러보면 값이 나오고 SUM은 값이 나와있지 않는다.
 
-<img width="1520" height="245" alt="Image" src="https://github.com/user-attachments/assets/0109efe2-7f7a-4e40-8f5e-7d127e0c43e5" />
+<img width="1511" height="464" alt="Image" src="https://github.com/user-attachments/assets/413a3d0f-e550-48a6-b638-2fb5dc4838e3" />
 
 - 이 처럼 엔드포인트를 타게 되면 SUM에도 값이 입력됨. 이 후 펑션이 끝나면 S1에도 숫자 30이 출력
 
-<img width="1510" height="517" alt="Image" src="https://github.com/user-attachments/assets/3e2fefa8-c7fd-4583-b1de-0983eb03298a" />
+<img width="1529" height="715" alt="Image" src="https://github.com/user-attachments/assets/34229acd-7c93-482b-b813-dbb7fdf4c7e2" />
 
 - 디버그에 들어오면 기존에 눌렀던 값들은 보이지 않고 안에서 값을 누르면 다시 보인다.
 
@@ -83,10 +81,288 @@
   ENDIF.
   ```
 
-<img width="1511" height="464" alt="Image" src="https://github.com/user-attachments/assets/8b2c5f0d-7a9b-4af4-aa10-da438f2c7cb9" />
+<img width="994" height="658" alt="Image" src="https://github.com/user-attachments/assets/4d8c4cb9-1aff-4977-a585-39c81614e8dd" />
 
 - 패턴 클릭 후 저렇게 하면 검색도 가능
 
-<img width="1529" height="715" alt="Image" src="https://github.com/user-attachments/assets/37c831bb-4b7f-4317-b4eb-c3458313289c" />
+<img width="1267" height="430" alt="Image" src="https://github.com/user-attachments/assets/57ceb922-3528-4e74-b80a-e772c3d4e759" />
 
 - PERFORM build_sort. 에 build_sort 더블 클릭 후 두번째 꺼 클릭 후 적용 (첫번째꺼로 하면 새로운 창에서 만들어버림)
+
+## 1. 과제
+
+SPFLI
+
+필드카탈로그 적용해보기
+
+carrid ⇒ key
+
+connid ⇒ key / lzero (둘 다) 
+
+cityfrom ⇒ emphasize
+
+cityto ⇒ emphasize
+
+fltime ⇒ edit_mask (이걸쓰면 시:분으로 나옴)
+
+deptime
+
+arrtime
+
+distance ⇒ decimals_out(소수점이 안나오게)
+
+distid
+
+```
+*&---------------------------------------------------------------------*
+*& Report Z4WEEK_ALV00
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+REPORT Z4WEEK_ALV00.
+
+TABLES:     spfli.
+
+TYPE-POOLS: slis.                                 "ALV Declarations
+
+*Data Declaration
+*----------------
+TYPES: BEGIN OF t_spfli,
+       carrid   TYPE spfli-carrid,
+       connid   TYPE spfli-connid,
+       cityfromm TYPE spfli-cityfrom,
+       cityto   TYPE spfli-cityto,
+       fltime   TYPE spfli-fltime,
+       deptime  TYPE spfli-deptime,
+       arrtime  TYPE spfli-arrtime,
+       distance TYPE spfli-distance,
+       distid   TYPE spfli-distid,
+       END OF t_spfli.
+
+DATA: it_spfli TYPE STANDARD TABLE OF t_spfli INITIAL SIZE 0,
+      wa_spfli TYPE t_spfli.
+
+*ALV data declarations
+DATA: fieldcatalog TYPE slis_t_fieldcat_alv WITH HEADER LINE,
+      gd_tab_group TYPE slis_t_sp_group_alv,
+      gd_layout    TYPE slis_layout_alv,
+      gd_repid     LIKE sy-repid.
+
+
+DATA : t TYPE slis_t_sp_group_alv .
+************************************************************************
+*Start-of-selection.
+START-OF-SELECTION.
+
+  PERFORM data_retrieval.
+  PERFORM build_fieldcatalog.
+  PERFORM build_layout.
+  PERFORM display_alv_report.
+
+
+*&---------------------------------------------------------------------*
+*&      Form  BUILD_FIELDCATALOG
+*&---------------------------------------------------------------------*
+*       Build Fieldcatalog for ALV Report
+*----------------------------------------------------------------------*
+FORM build_fieldcatalog.
+
+  fieldcatalog-fieldname   = 'carrid'.
+  fieldcatalog-seltext_m   = 'Airline Code'.
+  fieldcatalog-col_pos     = 0.
+  fieldcatalog-outputlen   = 10.
+  fieldcatalog-key         = 'X'. "전체 하늘색으로 바뀜
+  APPEND fieldcatalog TO fieldcatalog.
+  CLEAR  fieldcatalog.
+
+  fieldcatalog-fieldname   = 'connid'.
+  fieldcatalog-seltext_m   = 'Fligth Connection Number'.
+  fieldcatalog-col_pos     = 1.
+  fieldcatalog-key         = 'X'.
+  fieldcatalog-lzero         = 'X'.
+  APPEND fieldcatalog TO fieldcatalog.
+  CLEAR  fieldcatalog.
+
+  fieldcatalog-fieldname   = 'cityfrom'.
+  fieldcatalog-seltext_m   = 'CITYFROM'.
+  fieldcatalog-col_pos     = 2.
+  fieldcatalog-emphasize   = 'C300'. "색 적용
+  APPEND fieldcatalog TO fieldcatalog.
+  CLEAR  fieldcatalog.
+
+  fieldcatalog-fieldname   = 'cityto'.
+  fieldcatalog-seltext_m   = 'CITYTO'.
+  fieldcatalog-col_pos     = 3.
+  fieldcatalog-emphasize   = 'C500'. "색 적용
+  APPEND fieldcatalog TO fieldcatalog.
+  CLEAR  fieldcatalog.
+
+  fieldcatalog-fieldname   = 'fltime'.
+  fieldcatalog-seltext_m   = 'Flight time'.
+  fieldcatalog-col_pos     = 4.
+  "fieldcatalog-edit_mask   = '==__0'.
+  " fltime 자체가 시간을 문자로 표현한거라 작동이 안된다고함
+  " edit_mask는 숫자형 필드에만 적용됨.
+  APPEND fieldcatalog TO fieldcatalog.
+  CLEAR  fieldcatalog.
+
+  fieldcatalog-fieldname   = 'deptime'.
+  fieldcatalog-seltext_m   = 'Departure time'.
+  fieldcatalog-col_pos     = 5.
+  APPEND fieldcatalog TO fieldcatalog.
+  CLEAR  fieldcatalog.
+
+  fieldcatalog-fieldname   = 'arrtime'.
+  fieldcatalog-seltext_m   = 'Arrival time'.
+  fieldcatalog-col_pos     = 6.
+  APPEND fieldcatalog TO fieldcatalog.
+  CLEAR  fieldcatalog.
+
+  fieldcatalog-fieldname   = 'distance'.
+  fieldcatalog-seltext_m   = 'Distance'.
+  fieldcatalog-col_pos     = 7.
+  fieldcatalog-decimals_out = 0. " 소수점 몇자리까지 보여줄기 정함.
+  APPEND fieldcatalog TO fieldcatalog.
+  CLEAR  fieldcatalog.
+
+  fieldcatalog-fieldname   = 'distid'.
+  fieldcatalog-seltext_m   = 'Mass unit of distance (kms, miles)'.
+  fieldcatalog-col_pos     = 8.
+  APPEND fieldcatalog TO fieldcatalog.
+  CLEAR  fieldcatalog.
+ENDFORM.                    " BUILD_FIELDCATALOG
+
+
+*&---------------------------------------------------------------------*
+*&      Form  BUILD_LAYOUT
+*&---------------------------------------------------------------------*
+*       Build layout for ALV grid report
+*----------------------------------------------------------------------*
+FORM build_layout.
+
+  gd_layout-no_input          = 'X'.
+  gd_layout-colwidth_optimize = 'X'.
+  gd_layout-zebra = 'X'.
+*  gd_layout-info_fieldname =      'LINE_COLOR'.
+*  gd_layout-def_status = 'A'.
+
+ENDFORM.                    " BUILD_LAYOUT
+
+
+*&---------------------------------------------------------------------*
+*&      Form  DISPLAY_ALV_REPORT
+*&---------------------------------------------------------------------*
+*       Display report using ALV grid
+*----------------------------------------------------------------------*
+FORM display_alv_report.
+  gd_repid = sy-repid.
+  CALL FUNCTION 'REUSE_ALV_GRID_DISPLAY'
+    EXPORTING
+      i_callback_program = gd_repid
+      is_layout          = gd_layout
+      it_fieldcat        = fieldcatalog[]
+      i_save             = 'X'
+    TABLES
+      t_outtab           = it_spfli
+    EXCEPTIONS
+      program_error      = 1
+      OTHERS             = 2.
+  IF sy-subrc <> 0.
+* MESSAGE ID SY-MSGID TYPE SY-MSGTY NUMBER SY-MSGNO
+*         WITH SY-MSGV1 SY-MSGV2 SY-MSGV3 SY-MSGV4.
+  ENDIF.
+
+
+ENDFORM.                    " DISPLAY_ALV_REPORT
+
+
+*&---------------------------------------------------------------------*
+*&      Form  DATA_RETRIEVAL
+*&---------------------------------------------------------------------*
+*       Retrieve data form EKPO table and populate itab it_ekko
+*----------------------------------------------------------------------*
+FORM data_retrieval.
+  DATA: ld_color(1) TYPE c.
+
+  SELECT carrid connid cityfrom cityto fltime deptime arrtime distance distid
+*   UP TO 10 ROWS
+    FROM spfli "항공사 테이블
+    INTO TABLE it_spfli.
+
+ENDFORM.                    " DATA_RETRIEVAL
+```
+### lzero 적용 전
+
+<img width="759" height="291" alt="Image" src="https://github.com/user-attachments/assets/24772f48-e226-4874-949b-38b6fa5a4b78" />
+
+### lzero 적용 후
+
+<img width="756" height="289" alt="Image" src="https://github.com/user-attachments/assets/0749a26b-df54-499a-a5bb-0881041fb352" />
+
+### emphasize 적용 후
+
+<img width="756" height="288" alt="Image" src="https://github.com/user-attachments/assets/87b40fcd-0f62-4f91-8292-f5e11dd6a42a" />
+
+### decimals_out 적용 후
+
+<img width="724" height="285" alt="Image" src="https://github.com/user-attachments/assets/39cb3360-7979-4cb3-82c6-e291abb5750b" />
+
+### 1번 과제 최종
+
+<img width="725" height="286" alt="Image" src="https://github.com/user-attachments/assets/419031e2-04f5-4806-a6f1-b7a6a2ef9875" />
+
+### 2번 과제 최종
+
+<img width="576" height="735" alt="Image" src="https://github.com/user-attachments/assets/faa9be83-88ef-47b2-8839-d3784c326433" />
+
+- 2번 과제 하는 도중 이슈 사항
+do_sum을 바로 적용했을때 안돼서 GPT를 돌려보니 워크 에어리어와 테이블을 동시에 쓰면 구조가 깨진다고 해서
+
+```
+DATA: fieldcatalog TYPE slis_t_fieldcat_alv WITH HEADER LINE,
+      gd_tab_group TYPE slis_t_sp_group_alv,
+      gd_layout    TYPE slis_layout_alv,
+      gd_repid     LIKE sy-repid.
+```
+
+해당 부분을 
+
+```
+DATA: it_fieldcat TYPE slis_t_fieldcat_alv,   " 내부 테이블 (여러 줄)
+      wa_fieldcat TYPE slis_fieldcat_alv,     " 워크에어리어 (한 줄)
+      gd_tab_group TYPE slis_t_sp_group_alv,
+      gd_layout    TYPE slis_layout_alv,
+      gd_repid     LIKE sy-repid.
+```
+
+변경했음. 
+
+이후 
+```
+APPEND wa_fieldcat TO it_fieldcat.
+CLEAR wa_fieldcat.
+```
+
+로 변경 후 ALV 호출 부도
+
+```
+CALL FUNCTION 'REUSE_ALV_GRID_DISPLAY'
+  EXPORTING
+    i_callback_program = gd_repid
+    is_layout          = gd_layout
+    it_fieldcat        = it_fieldcat
+  TABLES
+    t_outtab           = it_sflight.
+```
+
+이렇게 변경
+
+이러고 또 돌려보니 구조가 깨져서 확인해보니
+
+seatsmax 를 seatmax라고 써서 발생했음.(s 빼먹음)
+
+do_sum을 썼을때 s가 빠지니 에러가 발생한거였음(이유는 잘모르겠음...) 그래서 기존 테이블에 s를 적용하고 do_sum만 사용하니 제대로 작동됨. (질문)
+
+두번째 질문은 seatsmax에서 do_sum 부분에 하나씩 해보라고 한게
+totals_before_items만 적용되고 다른거는 적용이 안돼서
+검색해보니 합계 대상 필드가 정의되어야 한다고 나오는데 어디를 수정해야될지 모르겠음.(질문)
